--- a/data/custom_menu.fr.in
+++ b/data/custom_menu.fr.in
@@ -61,7 +61,7 @@ cmenu_insert: /HTML/Formulaires/Case à cocher:<input type="checkbox" name="%0" 
 cmenu_insert: /HTML/Formulaires/Formulaire:<form action="%0" method="%1">:</form>:2:Action:Méthode:
 cmenu_insert: /HTML/Feuille de styles externe:<link rel="stylesheet" type="text/css" href="%0" />::0:Feuille de style:
 cmenu_insert: /HTML/DOCTYPEs/XHTML Transitionnel:<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 1.0 Transitional//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-loose.dtd">::0:
-cmenu_insert: /HTML/DOCTYPEs/XHTML Strict:<!DOCTYPE html "-//W3C//DTD XHTML 1.0 Strict//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-strict.dtd">::0:
+cmenu_insert: /HTML/DOCTYPEs/XHTML Strict:<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-strict.dtd">::0:
 cmenu_insert: /HTML/DOCTYPEs/XHTML avec jeux de cadres:<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http\://www.w3.org/TR/xhtml1/xhtml1-frameset.dtd">::0:
 cmenu_insert: /HTML/DOCTYPEs/HTML Transitionnel:<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http\://www.w3.org/TR/html4/loose.dtd">::0:
 cmenu_insert: /HTML/DOCTYPEs/HTML Strict:<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http\://www.w3.org/TR/html4/strict.dtd">::0:
