--- a/bluefish/data/custom_menu.de.in
+++ b/bluefish/data/custom_menu.de.in
@@ -92,7 +92,7 @@ cmenu_insert: /DocBook/Lists/Variable List:<variablelist><title>%0</title>\n\t<v
 cmenu_insert: /DocBook/Lists/Ordered List:<orderedlist>\n\t  <listitem><para>:</para></listitem>\n</orderedlist>:0:
 cmenu_insert: /DocBook/Lists/List Item:<listitem><para>:</para></listitem>:0:
 cmenu_insert: /DocBook/Lists/Itemized List:<itemizedlist>\n\t  <listitem><para>:</para></listitem>\n</itemizedlist>:0:
-cmenu_insert: /DocBook/Links/Internal Link:<xref linkend="%0"/>\n::1:Link ID:
+cmenu_insert: /DocBook/Links/Internal Link:<xref linkend="%0" />\n::1:Link ID:
 cmenu_insert: /DocBook/Links/External Link:<ulink url="%0">%1</ulink>\n::2:Link URL:Text:
 cmenu_insert: /DocBook/Layout/Option:<option>:</option>\n:0:
 cmenu_insert: /DocBook/Layout/Emphasis:<emphasis>:</emphasis>:0:
@@ -101,7 +101,7 @@ cmenu_insert: /DocBook/Layout/Application:<application>\n:</application>:0:
 cmenu_insert: /DocBook/Layout/Acronym:<acronym>\n:</acronym>:0:
 cmenu_insert: /DocBook/Headers/Legal Notice:<legalnotice>\n<para>:</para>\n</legalnotice>:0:
 cmenu_insert: /DocBook/Headers/History/Revision History:<revhistory>\n:\n</revhistory>:0:
-cmenu_insert: /DocBook/Headers/History/Revision:<revision>\n\t<revnumber>%0</revnumber>\n\t<date>%1</date>\n\t<authorinitials>%2</authorinitials>\n<revremark>%3</revremark>\n</revision>::4:Revision Number:Revision Date:Author's Initials:Remark:
+cmenu_insert: /DocBook/Headers/History/Revision:<revision>\n\t<revnumber>%0</revnumber>\n\t<date>%1</date>\n\t<authorinitials>%2</authorinitials>\n\t<revremark>%3</revremark>\n</revision>::4:Revision Number:Revision Date:Author's Initials:Remark:
 cmenu_insert: /DocBook/Headers/Entity/System Entity:<!ENTITY %0 SYSTEM "%0">::1:Entity Name:
 cmenu_insert: /DocBook/Headers/Entity/Simple Entity:<!ENTITY %0 "%0">::1:Entity Name:
 cmenu_insert: /DocBook/Headers/Entity/Complex Entity:<!ENTITY %0 "%1">::2:Entity Name:Entity Definition:
