New fref and image
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1771 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -67,6 +67,7 @@ TOOLBAR = \
 	pixmap_framewhiz framewhiz.png \
 	pixmap_fref fref.png \
 	pixmap_frdialog frdialog.png \
+	pixmap_frdialog2 frdialog2.png \
 	pixmap_frhide frhide.png \
 	pixmap_frinfo frinfo.png \
 	pixmap_frsearch frsearch.png \
