removed the old 'open-advanced' and replaced it with the new async one
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1794 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -32,7 +32,7 @@ gnulocaledir = $(prefix)/share/locale
 aliaspath = $(localedir):.
 
 CC = @CC@
-CFLAGS = @CFLAGS@
+CFLAGS = -DFB2 @CFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 INSTALL = @INSTALL@
@@ -50,7 +50,9 @@ SRCS = 	about.c \
 			cap.c \
 			char_table.c \
 			document.c \
+			file.c \
 			filebrowser.c \
+			filebrowser2.c \
 			fref.c \
 			gtk_easy.c \
 			gui.c \
