--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -51,6 +51,7 @@ SRCS = 	about.c \
 			char_table.c \
 			document.c \
 			file.c \
+			file_dialogs.c \
 			filebrowser.c \
 			filebrowser2.c \
 			fref.c \
