moving file dialogs to file_dialogs.c because document.c is getting too long and has too many different things
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1797 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -51,6 +51,7 @@ SRCS = 	about.c \
 			char_table.c \
 			document.c \
 			file.c \
+			file_dialogs.c \
 			filebrowser.c \
 			filebrowser2.c \
 			fref.c \
