--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -1,7 +1,7 @@
 c:String:0:":":1::#009900::0:0:
 c:String Escape:0:\\\\(n|t|v|b|r|f|a|\\\\|\\?|'|"|\\d{1,3}|x\\d+)::2:^string$:#990099::0:0:
 c:Preprocessor:0:#(include|define|if(def|ndef)?|else|elif|endif|undef)::2::#990099::0:0:
-c:Comment (C):0:/\\*:\\*/:1:^(top|preprocessor)$:#0000FF::1:2:
+c:Comment (C):0:/\\*.*?\\*/:\\*/:2::#0000FF::1:2:
 c:Comment (C99/C++):0://.*?$::2:^(top|preprocessor)$:#0000FF::1:2:
 c:Keywords:0:\\b(break|case|continue|default|do|else|for|goto|if|return|sizeof|switch|while)\\b::2::#009999::2:0:
 c:Storage Keywords:0:\\b(auto|char|const|double|enum|extern|FILE|float|int(8|16|32|64)?|long|register|short|signed|size_t|static|struct|typedef|union|unsigned|void|volatile)\\b::2::#000099::2:0:
