Add AUTHORS. Add 2 targets (clean, distclean) to Makefile.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1810 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish-doc/Makefile
+++ b/bluefish-doc/Makefile
@@ -158,6 +158,10 @@ clean-all-us: clean-html clean-pspdf-us
 
 clean-all: clean-html clean-pspdf-a4 clean-pspdf-us  builtdoc-remove tarballs-remove
 
+clean: clean-all
+
+distclean: clean
+
 tarball-all: all
 	mkdir -p ${TARBALL_DIR}/${BOOK_PREFIX}-html-chunked-${VERSION}/imgs
 	mkdir -p ${TARBALL_DIR}/${BOOK_PREFIX}-html-chunked-${VERSION}/figures
