Changing README, appendix C, Makefile to reflect the current built process.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1814 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish-doc/Makefile
+++ b/bluefish-doc/Makefile
@@ -1,8 +1,8 @@
 XSLTPROC = xsltproc
+HAVE_XSL_DIR=1
 
 ## You shouldn't normally need to edit anything below here.
 SHELL = /bin/sh
-
 VERSION=1.0-1
 BOOK_PREFIX=bluefish-doc
 BOOK_TOP=.
@@ -12,11 +12,10 @@ SOURCE_FIG=${BOOK_DIR}/figures
 OUTPUT_FIG=${OUTPUT_DIR}/figures
 SOURCE_IMG=${BOOK_DIR}/imgs
 OUTPUT_IMG=${OUTPUT_DIR}/imgs
-XSL_DIR=http://docbook.sourceforge.net/release/xsl/current
 STYLESHEETS_DIR=${BOOK_TOP}/stylesheets
 TARBALL_DIR=${BOOK_TOP}/tarballs
 BOOK_HTML_TARGET=${OUTPUT_DIR}/book.html
-BOOK_FO_TARGET=${OUTPUT_DIR}/book.fo
+BOOK_FO_TARGET=${BOOK_DIR}/book.fo
 BOOK_XML_A4=${STYLESHEETS_DIR}/titlepage-a4.xml
 BOOK_XSL_A4=${STYLESHEETS_DIR}/titlepage-a4.xsl
 BOOK_XML_US=${STYLESHEETS_DIR}/titlepage-us.xml
@@ -25,14 +24,21 @@ BOOK_HTML_XML=${STYLESHEETS_DIR}/titlepage-html.xml
 BOOK_HTML_XSL=${STYLESHEETS_DIR}/titlepage-html.xsl
 BOOK_LAYER_A4=${STYLESHEETS_DIR}/pdf-ps-a4.xsl
 BOOK_LAYER_US=${STYLESHEETS_DIR}/pdf-ps-us.xsl
-BOOK_TEMPLATE=${XSL_DIR}/template/titlepage.xsl
 BOOK_PDF_A4_TARGET=${OUTPUT_DIR}/book-a4.pdf
 BOOK_PDF_US_TARGET=${OUTPUT_DIR}/book-us.pdf
 BOOK_PS_A4_TARGET=${OUTPUT_DIR}/book-a4.ps
 BOOK_PS_US_TARGET=${OUTPUT_DIR}/book-us.ps
 BOOK_XML_SOURCE=${BOOK_DIR}/book.xml
 
+XSL_DIR=http://docbook.sourceforge.net/release/xsl/current
+
+HAVE_XSL_DIR=$(shell test -d docbook-xsl && echo "0")
+ifeq (${HAVE_XSL_DIR},0)
+XSL_DIR=./docbook-xsl
+endif
+
 XSL_FO=${XSL_DIR}/fo/docbook.xsl
+BOOK_TEMPLATE=${XSL_DIR}/template/titlepage.xsl
 XSL_HTML_CHUNK=${STYLESHEETS_DIR}/db2html.xsl
 XSL_HTML=${STYLESHEETS_DIR}/db2longhtml.xsl
 
@@ -46,61 +52,124 @@ cp ${SOURCE_IMG}/*.png ${OUTPUT_IMG}/
 cp ${STYLESHEETS_DIR}/manual.css ${OUTPUT_DIR}/
 endef
 
+define reinit-html
+if test "${HAVE_XSL_DIR}" = "0" ; then \
+mv ${XSL_HTML_CHUNK} ${XSL_HTML_CHUNK}-orig; \
+sed -e 's|..\/docbook-xsl|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|g' < ${XSL_HTML_CHUNK}-orig > ${XSL_HTML_CHUNK};\
+rm -f ${XSL_HTML_CHUNK}-orig; \
+fi
+endef
+
+define reinit-big-html
+if test "${HAVE_XSL_DIR}" = "0" ; then \
+mv ${XSL_HTML} ${XSL_HTML}-orig; \
+sed -e 's|..\/docbook-xsl|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|g' < ${XSL_HTML}-orig > ${XSL_HTML}; \
+rm -f ${XSL_HTML}-orig; \
+fi
+endef
+
+define reinit-fo-a4
+if test "${HAVE_XSL_DIR}" = "0" ; then \
+mv ${BOOK_LAYER_A4} ${BOOK_LAYER_A4}-orig; \
+sed -e 's|..\/docbook-xsl|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|g' < ${BOOK_LAYER_A4}-orig > ${BOOK_LAYER_A4}; \
+rm -f ${BOOK_LAYER_A4}-orig; \
+fi
+endef
+
+define reinit-fo-us
+if test "${HAVE_XSL_DIR}" = "0" ; then \
+mv ${BOOK_LAYER_US} ${BOOK_LAYER_US}-orig; \
+sed -e 's|..\/docbook-xsl|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|g' < ${BOOK_LAYER_US}-orig > ${BOOK_LAYER_US}; \
+rm -f ${BOOK_LAYER_US}-orig; \
+fi
+endef
+
 all: html-all pspdf-a4 pspdf-us
 
 all-a4: html-all pspdf-a4
 
 all-us: html-all pspdf-us
 
-html: clean-html  validate-all builtdoc-create
+init-html:
+	if test "${HAVE_XSL_DIR}" = "0" ; then \
+	mv ${XSL_HTML_CHUNK} ${XSL_HTML_CHUNK}-orig; \
+	sed -e 's|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|..\/docbook-xsl|g' < ${XSL_HTML_CHUNK}-orig > ${XSL_HTML_CHUNK}; \
+	fi
+
+init-big-html:
+	if test "${HAVE_XSL_DIR}" = "0" ; then \
+	mv ${XSL_HTML} ${XSL_HTML}-orig; \
+	sed -e 's|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|..\/docbook-xsl|g' < ${XSL_HTML}-orig > ${XSL_HTML}; \
+	fi
+
+init-fo-a4:
+	if test "${HAVE_XSL_DIR}" = "0" ; then \
+	mv ${BOOK_LAYER_A4} ${BOOK_LAYER_A4}-orig; \
+	sed -e 's|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|..\/docbook-xsl|g' < ${BOOK_LAYER_A4}-orig > ${BOOK_LAYER_A4}; \
+	fi
+
+init-fo-us:
+	if test "${HAVE_XSL_DIR}" = "0" ; then \
+	mv ${BOOK_LAYER_US} ${BOOK_LAYER_US}-orig; \
+	sed -e 's|http\:\/\/docbook.sourceforge.net\/release\/xsl\/current|..\/docbook-xsl|g' < ${BOOK_LAYER_US}-orig > ${BOOK_LAYER_US}; \
+	fi
+	
+html: clean-html  validate-all builtdoc-create init-html
 	${XSLTPROC} -output ${BOOK_HTML_XSL} ${BOOK_TEMPLATE} ${BOOK_HTML_XML}
 	${XSLTPROC} -output ${OUTPUT_DIR}/ ${XSL_HTML_CHUNK} ${BOOK_XML_SOURCE}	
 	${move-pictures}
+	${reinit-html}
 
-html-one-big: clean-html validate-all builtdoc-create
+html-one-big: clean-html validate-all builtdoc-create init-big-html
 	${XSLTPROC} -output ${BOOK_HTML_XSL} ${BOOK_TEMPLATE} ${BOOK_HTML_XML}
 	${XSLTPROC} -output ${BOOK_HTML_TARGET} ${XSL_HTML} ${BOOK_XML_SOURCE}
 	${move-pictures}
+	${reinit-big-html}
 	
-html-all: clean-html validate-all builtdoc-create
+html-all: clean-html validate-all builtdoc-create init-big-html init-html
 	${XSLTPROC} -output ${BOOK_HTML_XSL} ${BOOK_TEMPLATE} ${BOOK_HTML_XML}
 	${XSLTPROC} -output ${OUTPUT_DIR}/ ${XSL_HTML_CHUNK} ${BOOK_XML_SOURCE}	
 	${XSLTPROC} -output ${BOOK_HTML_TARGET} ${XSL_HTML} ${BOOK_XML_SOURCE}
 	${move-pictures}
+	${reinit-html}
+	${reinit-big-html}
 	
-pdf-a4: clean-pdf-a4 validate-all fo-a4 builtdoc-create 
+pdf-a4: clean-pdf-a4 validate-all fo-a4 builtdoc-create
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -pdf ${BOOK_PDF_A4_TARGET}
 	rm -f ${BOOK_FO_TARGET}
 
-pdf-us: clean-pdf-us validate-all fo-us builtdoc-create 
+pdf-us: clean-pdf-us validate-all fo-us builtdoc-create
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -pdf ${BOOK_PDF_US_TARGET}
 	rm -f ${BOOK_FO_TARGET}
+	${reinit-fo-us}
 
-ps-a4: clean-ps-a4 validate-all fo-a4 builtdoc-create 
+ps-a4: clean-ps-a4 validate-all fo-a4 builtdoc-create
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -ps ${BOOK_PS_A4_TARGET}
 	rm -f ${BOOK_FO_TARGET}
 
-ps-us: clean-ps-us validate-all fo-us builtdoc-create 
+ps-us: clean-ps-us validate-all fo-us builtdoc-create
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -ps ${BOOK_PS_US_TARGET}
 	rm -f ${BOOK_FO_TARGET}
 
-pspdf-a4: clean-pspdf-a4 validate-all builtdoc-create fo-a4
+pspdf-a4: clean-pspdf-a4 validate-all fo-a4 builtdoc-create
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -pdf ${BOOK_PDF_A4_TARGET}
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -ps ${BOOK_PS_A4_TARGET}
 	rm -f ${BOOK_FO_TARGET}
 	
-pspdf-us: clean-pspdf-us validate-all fo-us builtdoc-create 
+pspdf-us: clean-pspdf-us validate-all fo-us builtdoc-create
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -pdf ${BOOK_PDF_US_TARGET}
 	${RUN_FOP} ${BOOK_TOP} -fo ${BOOK_FO_TARGET} -ps ${BOOK_PS_US_TARGET}
 	rm -f ${BOOK_FO_TARGET}
 	
-fo-a4: 
+fo-a4:  init-fo-a4
 	${XSLTPROC} -output ${BOOK_XSL_A4} ${BOOK_TEMPLATE} ${BOOK_XML_A4}
 	${XSLTPROC} -output ${BOOK_FO_TARGET} ${BOOK_LAYER_A4} ${BOOK_XML_SOURCE}
+	${reinit-fo-a4}
 
-fo-us:
+fo-us: init-fo-us
 	${XSLTPROC} -output ${BOOK_XSL_US} ${BOOK_TEMPLATE} ${BOOK_XML_US}
 	${XSLTPROC} -output ${BOOK_FO_TARGET} ${BOOK_LAYER_US} ${BOOK_XML_SOURCE}
+	${reinit-fo-us}
 
 validate-all:
 	xmllint --noout --valid ${BOOK_XML_SOURCE}
