--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -301,7 +301,7 @@ xml:Comment:0:<!--:-->:1::#AAAAAA::1:2:
 xml:DocType:1:<!DOCTYPE [a-z0-9]+:[^?-]>:1::#b35300::0:0:
 xml:Character Data:1:<!\\[CDATA\\[:\\]\\]>:1::#a2b300::0:0:
 xml:Character Entity:1:&[^;]+;::2::#9b0054::0:0:
-stylesheet:Selector:1:(\\*|\\b(a|body|abbr|acronym|address|applet|area|b|big|bdo|blockquote|br|button|caption|cite|code|col|colgroup|dd|del|dfn|div|dl|dt|em|embed|fieldset|form|h\\d+|hr|i|iframe|img|input|ins|kbd|label|legend|li|map|noframes|noscript|object|ol|optgroup|option|p|pre|q|samp|select|small|span|strong|table|tbody|td|textarea|tfoot|th|thead|tr|tt|ul|var)\\b)::2:^top$:#cc0000::2:0:
+stylesheet:Selector:1:(\\*|\\b(a|body|abbr|acronym|address|applet|area|b|big|bdo|blockquote|br|button|caption|cite|code|col|colgroup|dd|del|dfn|div|dl|dt|em|embed|fieldset|form|h\\d+|hr|html|i|iframe|img|input|ins|kbd|label|legend|li|map|noframes|noscript|object|ol|optgroup|option|p|pre|q|samp|select|small|span|strong|table|tbody|td|textarea|tfoot|th|thead|tr|tt|ul|var)\\b)::2:^top$:#cc0000::2:0:
 stylesheet:Identifiers:1:(#|\\.)[a-z0-9\\-_\:( >)?]+(?=[, \\{a-z\\*])::2::#cc3300::2:0:
 stylesheet:Attribute Identifiers:1:\\[[a-z0-9\\.\\-_\\\:]+=":"\\]:1::#cc3300::2:0:
 stylesheet:Pseudo-selectors:1:\\\:(first(\\-child|letter|line)|link|active|visited|hover|focus|lang\\(\\)|left|right|first|before|after)::2::#336633::2:0:
